Fix salvataggio file principale richiesta vuoto.